--- a/app/views/admin/posts/edit.html.haml
+++ b/app/views/admin/posts/edit.html.haml
@@ -1,6 +1,5 @@
-%h2 editing post
+.container
+  %h2 editing post
 
-= render :partial => 'form'
-  
-  
-    
+  .columns
+    .column.is-two-thirds= render :partial => 'form'
