--- a/app/views/layouts/services.html.haml
+++ b/app/views/layouts/services.html.haml
@@ -61,7 +61,7 @@
             %a.icon.fa-envelope-o{:href => "/contact"}
               %span.label Email
         %ul.copyright
-          %li © Serious Introspection Services, an enterprise of John W. Fail t:mi.
+          %li © Serious Introspection Services, an enterprise of No Culture Icons
           %li
             Y-tunnus: 2277894-8
 
