--- a/app/views/posts/_post_excerpt.html.haml
+++ b/app/views/posts/_post_excerpt.html.haml
@@ -1,26 +1,21 @@
-.row
-  .small-12.columns.text-center
-    %h3.subheading= link_to raw(post.title), post
-    %medium.date= l post.updated_at, :format => :long
+%h3.subtitle= link_to raw(post.title), post
+.date= l post.updated_at, :format => :long
     
 - if post.image? && post.photos.empty?
-  .row
-    .small-12.columns
-      .cropped= image_tag post.image.url(:main)
+  %figure.image= image_tag post.image.url(:main).gsub(/development/, 'production')
 
 
 - unless post.photos.empty?
-  .row
-    .small-12.columns.text-center
-      - if post.photos.size == 1
-        .cropped= image_tag post.photos.first.filename.url(:main)
-      - elsif post.photos.size > 1
-        %ul{:"data-orbit" => ""}
-          - post.photos.each do |p|
-            %li
-              = image_tag p.filename.url(:main) 
-    
-.row          
-  .small-12.columns.text-center
-    %p= raw(Nokogiri::HTML.parse(post.body.gsub(/\<span\>/, '<p>').gsub(/\<\/span\>/, '</p>')).css('p').first.text) rescue raw(truncate_html(post.body, :length => 1500))
-    = link_to 'Read more', post, :class => [:button, :tiny]
+  - if post.photos.size == 1
+    %figure.image= image_tag post.photos.first.filename.url(:main)
+  - elsif post.photos.size > 1
+    .carousel
+      - post.photos.each do |p|
+        %figure.image= image_tag p.filename.url(:main) 
+
+.content.post_body= raw(Nokogiri::HTML.parse(post.body.gsub(/\<span\>/, '<p>').gsub(/\<\/span\>/, '</p>')).css('p').first.text) rescue raw(truncate_html(post.body, :length => 1500))
+= link_to 'Read more', post, :class => [:button, :tiny]
+
+= content_for :jquery do
+  :plain
+    $('.carousel').slick()    
