--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,50 +1,53 @@
-= semantic_nested_form_for [:admin, @post], :html => {:multipart => true} do |f|
-  .row
-    .small-6.columns= f.input :title
-  .row
-    .small-11.columns= f.input :body, :input_html => {:class => :ckeditor}
+= nested_form_for [:admin, @post], :html => {:multipart => true} do |f|
+  .field
+    %label.label Title
+    .control= f.text_field :title, class: :input
+  .field
+    %label.label Body
+    .control= f.text_area :body, :class => :ckeditor
   - unless @post.extended.blank?
-    .row
-      .small-6.columns= f.input :extended, :input_html => {:class => :ckeditor}
-  .row
-    .small-8.columns= f.input :tag_list, input_html: {value: f.object.tag_list.blank? ? '' : f.object.tags.join(',')}
+    .field
+      %label.label extended:
+      .control= f.text_area :extended, :class => :ckeditor 
+  .field
+    %label.label Tags
+    .control= f.text_field :tag_list, value: f.object.tag_list.blank? ? '' : f.object.tags.join(','), class: :input
   
-  .row
-    .small-7.columns
+  .field
+    .control
       - unless f.object.image.blank?
-        = image_tag f.object.image.url(:wide)
-      = f.input :image
-  .row
+        %figure.image= image_tag f.object.image.url(:wide)
+      = f.file_field :image
+  .field
     = f.fields_for :photos do |ff|
-
       - unless ff.object.filename.blank?
-        = image_tag ff.object.filename.url(:midsize)
-      = ff.input :filename
+        %figure.image= image_tag ff.object.filename.url(:midsize)
+      = ff.file_field :filename
       = ff.link_to_remove 'Remove this'
   
     = f.link_to_add 'add one or more images', :photos, class: [:button, :small]
-  .row
+  .field
     = f.fields_for :videos do |ff|
       - unless ff.object.blank?
-        = image_tag ff.object.url
-        = ff.input :url
-        = ff.input :bytes
-        = ff.input :content_type
+        = image_tag ff.object.url rescue ''
+        = ff.text_field :url, class: :input
+        = ff.text_field :bytes, class: :input
+        = ff.text_field :content_type, class: :input
   
     = f.link_to_add 'add one or more videos', :videos, class: [:button, :small]
 
-  .row
+  .field
     = f.fields_for :audiopodcasts do |ff|
       - unless ff.object.blank?
-        = image_tag ff.object.url
-        = ff.input :url
-        = ff.input :bytes
-        = ff.input :content_type
+        = image_tag ff.object.url rescue ''
+        = ff.text_field :url, class: :input
+        = ff.text_field :bytes, class: :input
+        = ff.text_field :content_type, class: :input
   
     = f.link_to_add 'add one or more audio attachments', :audiopodcasts, class: [:button, :small]
           
-  .row
-    .small-6.columns= f.input :published
+  .field
+    .small-6.control= f.check_box :published
       
-  .row
-    .small-6.columns= f.submit 'Save', class: [:small, :round, :button] 
+  .field
+    .small-6.control= f.submit 'Save', class: [:small, :round, :button] 
