--- a/app/views/crumbles/_crumble_sidebar.html.haml
+++ b/app/views/crumbles/_crumble_sidebar.html.haml
@@ -1,17 +1,15 @@
 - unless @crumble.related.empty?
-  .row
-    .small-12.columns
-      %h3 Related crumbles:
+  %h3.subtitle Related items:
   
   - @crumble.related.sort_by{|x| x.updated_at }.reverse[0..5].in_groups_of(3).each do |group|
-    .row.related_crumbles{:"data-equalizer" => ""}
-      - group.each do |related|
-        - next if related.nil?
-        .small-4.columns{:"data-equalizer-watch" => ""}
-          .related_title= link_to related.title, related
-          - if related.icon?
-            .columns= image_tag related.icon.url(:midsize)
-          %medium= l related.created_at.to_date, :format => :long
+    - group.each do |related|
+      - next if related.nil?
+      .related
+        %h6= link_to related.title, related
+        - if related.icon?
+          %figure.image.is-128x128= image_tag related.icon.url(:midsize)
+        .date= l related.created_at.to_date, :format => :long
+
 .crumble_tags= raw format_tags(@crumble)          
 .share_this= render partial: 'shared/share_buttons', locals: {url:  CGI::escape("http://#{request.host}#{request.port != 80 ? ":" + request.port.to_s : ''}#{url_for(@crumble)}"), title: CGI::escape(@crumble.title)}
 
