--- a/app/views/frontpage/_title_top_post.haml
+++ b/app/views/frontpage/_title_top_post.haml
@@ -1,30 +1,27 @@
 - if post.image? && post.photos.empty?
-  .row{:"data-equalizer" => 'inner'}
-    .small-12.columns
-      .cropped= image_tag post.image.url(:main).gsub('development', 'production')
-.row
-  .small-12.columns.text-center.post
-    %h3.subheading= link_to post.title, post
-    %medium
-      %em= "posted " +  l(post.updated_at, :format => :long)
+  %figure.image= image_tag post.image.url(:main).gsub('development', 'production')
+
+%h2.is-size-4.subtitle= link_to post.title, post
+%medium
+  %em= "posted " +  l(post.updated_at, :format => :long)
 
 - unless post.photos.empty?
-  .row
-    .small-12.columns.text-center
-      - if post.photos.size == 1
-        .cropped= image_tag post.photos.first.filename.url(:main)
-      - elsif post.photos.size > 1
-        %ul{:"data-orbit" => ""}
-          - post.photos.each do |p|
-            %li
-              = image_tag p.filename.url(:main) 
-    
-.row          
-  .small-12.columns.text-center
-    - first = Nokogiri::HTML.parse(post.body).css('p')
-    %p
-      - if first.blank?
-        = raw Nokogiri::HTML.parse(post.body).search('div')[0..2]
-      - else
-        = raw first
-    = link_to 'Read more', post, :class => [:button, :tiny]
+
+  - if post.photos.size == 1
+    %figure.image= image_tag post.photos.first.filename.url(:main)
+  - elsif post.photos.size > 1
+    .carousel
+      - post.photos.each do |p|
+        %div
+          = image_tag p.filename.url(:main) 
+    = content_for :jquery do
+      :plain
+        $('.carousel').slick()
+
+- first = Nokogiri::HTML.parse(post.body).css('p')
+.content
+  - if !first.blank?
+    = raw Nokogiri::HTML.parse(post.body).search('p')[0..2]
+  - else
+    = raw first
+= link_to 'Read more', post, :class => [:button, :tiny]
