--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html{:lang => "en"}
+%html.has-navbar-fixed-top{:lang => "en"}
   %head
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
@@ -8,80 +8,88 @@
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "cms", :media => "all"
 
-    = javascript_include_tag "vendor/modernizr" 
+    = javascript_include_tag "cms"
     = csrf_meta_tags 
   %body
-    = javascript_include_tag "application"
-    = javascript_include_tag :cms
-    .new_header
-      .row
-        .large-4.columns
-          %h1
-            -# = link_to image_tag('jape.png'), '/'
-            -# = link_to image_tag('johnfailicewhistle.jpg'), '/'
-            = link_to image_tag('icewhistle_combined.png'), '/'
-        .large-8.columns
-          %ul.dropdown.menu{:'data-dropdown-menu' => ""}
-            %li
-              %a.button{:href => "#"} Who?
-              %ul.menu#who
-                %li= link_to 'CV', '/cv'
-                %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
-            %li
-              %a.button{:href => "#"} Projects
-              %ul.menu
-                %li= link_to 'Ptarmigan', 'http://ptarmigan.ee/'
-                %li= link_to 'Pixelache', 'http://pixelache.ac/'
-                %li= link_to 'Lied Music', 'http://liedmusic.co.uk/'
-                %li= link_to 'Cenotaph', 'http://cenotaph.org/'
-                %li= link_to 'Slothrop\'s', 'http://slothrops.ee/'
-              
-            %li
-              %a.button{:href => "#"} Archive
-              %ul#archive.menu
-                %li= link_to 'All posts', posts_path
-                %li= link_to 'Blindness', 'http://blindness.icewhistle.com/'
-                %li= link_to 'Crumbles', crumbles_path
-                %li= link_to 'Bookmarks', 'http://icewhistle.postach.io'
-  
-            
-            
-            
+    %nav.navbar.is-fixed-top{role: :navigation, :'aria-label' => 'main navigation'}
+      .navbar-brand
+        %a.navbar-item{href: '/'}
+          = image_tag('icewhistle_combined.png')
+          = image_tag('logo_small.png', width: 220)
+        %a.navbar-burger.burger{:'aria-label' => :menu, :'aria-expanded' => false, :'data-target' => :navbarBasic, role: :button}
+      #navbarBasic.navbar-menu
+        .navbar-end
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Who?
+            .navbar-dropdown
+              = link_to 'CV', '/cv', class: 'navbar-item'
+              = link_to 'Discography', 'http://static.icewhistle.com/discog/', class: 'navbar-item'
+              = link_to 'Contact', '/contact', class: 'navbar-item'
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Past projects
+            .navbar-dropdown
+              = link_to 'Kuusi Palaa', 'https://kuusipalaa.fi', class: 'navbar-item'
+              = link_to 'Temporary', 'https://temporary.fi', class: 'navbar-item'
+              = link_to 'Pixelache Living Spaces', 'http://livingspaces.pixelache.ac/', class: 'navbar-item'
+              .navbar-item
+                Ptarmigan: 
+                = link_to(' Helsinki', 'https://ptarmigan.fi/')
+                = " | "
+                = link_to(' Tallinn', 'https://ptarmigan.ee')
+              = link_to 'Cenotaph', 'https://cenotaph.org/', class: 'navbar-item'
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Archives
+            .navbar-dropdown
+              = link_to 'All posts', posts_path, class: 'navbar-item'
+              = link_to 'Blindness blog', 'https://blindness.icewhistle.com/', class: 'navbar-item'
+              = link_to 'Archives', crumbles_path, class: 'navbar-item'
+              = link_to 'Bookmarks', 'https://www.evernote.com/pub/johnwfail/bookmarks', class: 'navbar-item'
+                    
+          - if current_user
+            .navbar-item.has-dropdown.is-hoverable
+              %a.navbar-link CMS
+              .navbar-dropdown
+                = link_to 'Posts', admin_posts_path, class: 'navbar-item'
+                = link_to 'Archives', admin_crumbles_path, class: 'navbar-item'
+                = link_to 'CV', admin_projects_path, class: 'navbar-item'
+                = link_to 'Sign out', '/logout', class: 'navbar-item'
     %main
       .footer-shadow= yield
-    %footer#main_footer
-      .row
-        .small-3.columns
-          = link_to image_tag('jape.png'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "slow");'
-          = link_to image_tag('johnfailicewhistle.jpg'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "fast");'
-        .small-3.columns
-          %ul
-            %li= link_to 'All posts', posts_path
-            %li= link_to 'Blindness', 'http://blindness.icewhistle.com'
-            %li= link_to 'Archival/crumbles', crumbles_path
-            %li= link_to 'John W. Fail CV', '/cv'
-            %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
-        .small-3.columns
-          %ul
-            %li= link_to 'Ptarmigan Tallinn', 'http://ptarmigan.ee', :target => :_blank
-            %li= link_to 'Ptarmigan Helsinki', 'http://ptarmigan.fi', :target => :_blank
-            %li= link_to 'Pixelache', 'http://pixelache.ac', :target => :_blank
-            %li= link_to 'Project Blood Team', 'http://bloodteam.com', :target => :_blank
-            %li= link_to 'Cenotaph', 'http://cenotaph.org', :target => :_blank
-            %li= link_to 'Lied Music', 'http://liedmusic.co.uk', :target => :_blank
-        .small-3.columns
-          %ul
-            %li= link_to 'Twitter', 'http://twitter.com/hyksos', :target => :_blank
-            %li= link_to 'RSS', 'http://feeds.feedburner.com/IcewhistleAll/'
-            %li= link_to 'GitHub', 'http://github.com/cenotaph', :target => :_blank
-            %li
-              %a{:href =>"#",  :"data-dropdown"=> "other_projects",  :class => "dropdown tiny"} Other projects
-              %ul#other_projects.f-dropdown{:"data-dropdown-content" => ""}
-                %li= link_to 'Tiib', 'http://tiib.net', :target => :_blank
-                %li= link_to 'Triple Canopy', 'http://canopycanopycanopy.com/', :target => :_blank
-                %li= link_to 'Supermarket Art Fair', 'http://supermarketartfair.com', :target => :_blank
-                %li= link_to 'Version', 'http://version.com', :target => :_blank
-            %li= link_to 'Email', ' john (@) ptarmigan (piste) (two-letter-country-code, either one that has a ptarmigan)'
+    %footer.footer
+      .container
+        .columns
+          .column.is-one-fifth
+            = link_to image_tag('jape.png'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "slow");'
+            = link_to image_tag('johnfailicewhistle.jpg'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "fast");'
+          .column
+            %ul
+              %li= link_to 'All posts', posts_path
+              %li= link_to 'Blindness blog', 'https://blindness.icewhistle.com'
+              %li= link_to 'Archival material', crumbles_path
+              %li= link_to 'John W. Fail CV', '/cv'
+              %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
+          .column
+            %ul
+              %li= link_to 'Temporary', 'https://temporary.fi', target: :_blank
+              %li= link_to 'Living Spaces', 'http://livingspaces.pixelache.ac', :target => :_blank
+              %li= link_to 'Ptarmigan', 'http://ptarmigan.ee', :target => :_blank
+
+              %li= link_to 'Project Blood Team', 'http://bloodteam.com', :target => :_blank
+              %li= link_to 'Cenotaph', 'http://cenotaph.org', :target => :_blank
+              -#%li= link_to 'Lied Music', 'http://liedmusic.co.uk', :target => :_blank
+          .column
+            %ul
+              %li= link_to 'Twitter', 'http://twitter.com/hyksos', :target => :_blank
+              %li= link_to 'RSS', 'http://feeds.feedburner.com/IcewhistleAll/'
+              %li= link_to 'GitHub', 'http://github.com/cenotaph', :target => :_blank
+              %li
+                -#%a{:href =>"#",  :"data-dropdown"=> "other_projects",  :class => "dropdown tiny"} Other projects
+                -#%ul#other_projects.f-dropdown{:"data-dropdown-content" => ""}
+                / %li= link_to 'Tiib', 'http://tiib.net', :target => :_blank
+                / %li= link_to 'Triple Canopy', 'http://canopycanopycanopy.com/', :target => :_blank
+                / %li= link_to 'Supermarket Art Fair', 'http://supermarketartfair.com', :target => :_blank
+                / %li= link_to 'Version', 'http://version.com', :target => :_blank
+              %li= link_to 'Contact', '/contact'
     :javascript
       $(document).ready(function() {
         #{yield :jquery}
