--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,6 @@
 !!!
-%html{:lang => "en"}
+%html.has-navbar-fixed-top{:lang => "en"}
   %head
-  
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     -# %title= content_for?(:title) ? yield(:title) : "Icewhistle"
@@ -25,117 +24,104 @@
     %meta{:content => "#ffffff", :name => "theme-color"}/
     
     %link{:href => 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&subset=latin-ext', :rel => 'stylesheet', :type => 'text/css'}
-    = stylesheet_link_tag "application"
+
     %link{:href => "//cdn-images.mailchimp.com/embedcode/classic-081711.css", :rel => "stylesheet", :type => "text/css"}/
+    = stylesheet_link_tag "application"
     = javascript_include_tag "application"
-    = csrf_meta_tags
-    - unless user_signed_in?
-      :javascript
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    = csrf_meta_tag
 
-        ga('create', 'UA-8528342-1', 'auto');
-        ga('send', 'pageview');
-
-      
   %body{:class => controller.controller_name}
-    %header#header
-      %div{:"data-sticky-container" => ''}
-        .top-bar{:"data-margin-top" => 0, :"data-sticky" => '', style: 'width: 100%', :'data-top-anchor' => 1}
-          .top-bar-title.columns.large-6.medium-5
-            %span.menu{"data-hide-for" => "medium", "data-responsive-toggle" => "responsive-menu"}
-              %button.menu-icon.dark{"data-toggle" => "", :type => "button"}
-            %h1
-              %span.hide-for-medium-only= link_to image_tag('icewhistle_combined.png'), '/'
-              = link_to image_tag('logo_small.png'), '/'
-          #responsive-menu 
-            .top-bar-left
-              %ul.dropdown.menu{:"data-dropdown-menu" => ''}
-                - if current_user
-                  %li
-                    = link_to 'CMS', '#'
-                    %ul.menu.vertical
-                      %li= link_to 'Posts', admin_posts_path
-                      %li= link_to 'Archives', admin_crumbles_path
-                      %li= link_to 'CV', admin_projects_path
-                      %li= link_to 'Sign out', '/logout'
-                %li
-                  = link_to 'Who?', '#'
-                  %ul.menu.vertical
-                    %li= link_to 'CV', '/cv'
-                    %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
-                    %li= link_to 'Contact', '/contact'
-                %li
-                  = link_to 'Projects', '#'
-                  %ul.menu.vertical
-                    %li= link_to 'Temporary', 'https://temporary.fi/'
-                    %li= link_to 'Pixelache Living Spaces', 'http://livingspaces.pixelache.ac/'
-                    %li= link_to 'Ptarmigan', 'http://ptarmigan.ee/'
-                
-                    -# %li= link_to 'Lied Music', 'http://liedmusic.co.uk/'
-                    %li= link_to 'Cenotaph', 'http://cenotaph.org/'
-                    -#%li= link_to 'Slothrop\'s', 'http://slothrops.ee/'
+    %nav.navbar.is-fixed-top{role: :navigation, :'aria-label' => 'main navigation'}
+      .navbar-brand
+        %a.navbar-item{href: '/'}
+          = image_tag('icewhistle_combined.png')
+          = image_tag('logo_small.png', width: 220)
+        %a.navbar-burger.burger{:'aria-label' => :menu, :'aria-expanded' => false, :'data-target' => :navbarBasic, role: :button}
+      #navbarBasic.navbar-menu
+        .navbar-end
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Who?
+            .navbar-dropdown
+              = link_to 'CV', '/cv', class: 'navbar-item'
+              = link_to 'Discography', 'http://static.icewhistle.com/discog/', class: 'navbar-item'
+              = link_to 'Contact', '/contact', class: 'navbar-item'
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Past projects
+            .navbar-dropdown
+              = link_to 'Kuusi Palaa', 'https://kuusipalaa.fi', class: 'navbar-item'
+              = link_to 'Temporary', 'https://temporary.fi', class: 'navbar-item'
+              = link_to 'Pixelache Living Spaces', 'http://livingspaces.pixelache.ac/', class: 'navbar-item'
+              .navbar-item
+                Ptarmigan: 
+                = link_to(' Helsinki', 'https://ptarmigan.fi/')
+                = " | "
+                = link_to(' Tallinn', 'https://ptarmigan.ee')
+              = link_to 'Cenotaph', 'https://cenotaph.org/', class: 'navbar-item'
+          .navbar-item.has-dropdown.is-hoverable
+            %a.navbar-link Archives
+            .navbar-dropdown
+              = link_to 'All posts', posts_path, class: 'navbar-item'
+              = link_to 'Blindness blog', 'https://blindness.icewhistle.com/', class: 'navbar-item'
+              = link_to 'Archives', crumbles_path, class: 'navbar-item'
+              = link_to 'Bookmarks', 'https://www.evernote.com/pub/johnwfail/bookmarks', class: 'navbar-item'
+                    
+          - if current_user
+            .navbar-item.has-dropdown.is-hoverable
+              %a.navbar-link CMS
+              .navbar-dropdown
+                = link_to 'Posts', admin_posts_path, class: 'navbar-item'
+                = link_to 'Archives', admin_crumbles_path, class: 'navbar-item'
+                = link_to 'CV', admin_projects_path, class: 'navbar-item'
+                = link_to 'Sign out', '/logout', class: 'navbar-item'
           
-                %li
-                  = link_to 'Archive', '#'
-                  %ul.menu.vertical
-                    %li= link_to 'All posts', posts_path
-                    %li= link_to 'Blindness', 'http://blindness.icewhistle.com/'
-                    %li= link_to 'Archives', crumbles_path
-                    %li= link_to 'Bookmarks', 'https://www.evernote.com/pub/johnwfail/bookmarks'
-
-            
-            
-            
     %main
       - if flash[:error] || flash[:notice] || flash[:alert]
-        #flash
-          .row
-            .small-12.columns
-              - if flash[:error]
-                .error= raw flash[:error]
-              - if flash[:notice]
-                .error= raw flash[:notice]
-              - if flash[:alert]
-                .error= raw flash[:alert]              
-      .footer-shadow{class: controller.controller_name }
-        = yield
-    %footer#main_footer
-      .row
-        .medium-3.small-6.columns
-          = link_to image_tag('jape.png'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "slow");'
-          = link_to image_tag('johnfailicewhistle.jpg'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "fast");'
-        .small-6.medium-3.columns
-          %ul
-            %li= link_to 'All posts', posts_path
-            %li= link_to 'Blindness', 'http://blindness.icewhistle.com'
-            %li= link_to 'Archival material', crumbles_path
-            %li= link_to 'John W. Fail CV', '/cv'
-            %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
-        .medium-3.small-6.columns
-          %ul
-            %li= link_to 'Temporary', 'https://temporary.fi', target: :_blank
-            %li= link_to 'Living Spaces', 'http://livingspaces.pixelache.ac', :target => :_blank
-            %li= link_to 'Ptarmigan', 'http://ptarmigan.ee', :target => :_blank
+        - if flash[:error]
+          %section.hero.is-danger
+            .hero-body= raw flash[:error]
+        - if flash[:notice]
+          %section.hero.is-success
+            .hero-body= raw flash[:notice]
+        - if flash[:alert]
+          %section.hero.is-warning
+            .hero-body= raw flash[:alert]              
 
-            %li= link_to 'Project Blood Team', 'http://bloodteam.com', :target => :_blank
-            %li= link_to 'Cenotaph', 'http://cenotaph.org', :target => :_blank
-            -#%li= link_to 'Lied Music', 'http://liedmusic.co.uk', :target => :_blank
-        .small-6.medium-3.columns
-          %ul
-            %li= link_to 'Twitter', 'http://twitter.com/hyksos', :target => :_blank
-            %li= link_to 'RSS', 'http://feeds.feedburner.com/IcewhistleAll/'
-            %li= link_to 'GitHub', 'http://github.com/cenotaph', :target => :_blank
-            %li
-              -#%a{:href =>"#",  :"data-dropdown"=> "other_projects",  :class => "dropdown tiny"} Other projects
-              -#%ul#other_projects.f-dropdown{:"data-dropdown-content" => ""}
-              / %li= link_to 'Tiib', 'http://tiib.net', :target => :_blank
-              / %li= link_to 'Triple Canopy', 'http://canopycanopycanopy.com/', :target => :_blank
-              / %li= link_to 'Supermarket Art Fair', 'http://supermarketartfair.com', :target => :_blank
-              / %li= link_to 'Version', 'http://version.com', :target => :_blank
-            %li= link_to 'Email', ' john (@) ptarmigan (piste) (two-letter-country-code, either one that has a ptarmigan)'
+      = yield
+    %footer.footer
+      .container
+        .columns
+          .column.is-one-fifth
+            = link_to image_tag('jape.png'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "slow");'
+            = link_to image_tag('johnfailicewhistle.jpg'), 'javascript:$("html, body").animate({ scrollTop: 0 }, "fast");'
+          .column
+            %ul
+              %li= link_to 'All posts', posts_path
+              %li= link_to 'Blindness blog', 'https://blindness.icewhistle.com'
+              %li= link_to 'Archival material', crumbles_path
+              %li= link_to 'John W. Fail CV', '/cv'
+              %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
+          .column
+            %ul
+              %li= link_to 'Temporary', 'https://temporary.fi', target: :_blank
+              %li= link_to 'Living Spaces', 'http://livingspaces.pixelache.ac', :target => :_blank
+              %li= link_to 'Ptarmigan', 'http://ptarmigan.ee', :target => :_blank
+
+              %li= link_to 'Project Blood Team', 'http://bloodteam.com', :target => :_blank
+              %li= link_to 'Cenotaph', 'http://cenotaph.org', :target => :_blank
+              -#%li= link_to 'Lied Music', 'http://liedmusic.co.uk', :target => :_blank
+          .column
+            %ul
+              %li= link_to 'Twitter', 'http://twitter.com/hyksos', :target => :_blank
+              %li= link_to 'RSS', 'http://feeds.feedburner.com/IcewhistleAll/'
+              %li= link_to 'GitHub', 'http://github.com/cenotaph', :target => :_blank
+              %li
+                -#%a{:href =>"#",  :"data-dropdown"=> "other_projects",  :class => "dropdown tiny"} Other projects
+                -#%ul#other_projects.f-dropdown{:"data-dropdown-content" => ""}
+                / %li= link_to 'Tiib', 'http://tiib.net', :target => :_blank
+                / %li= link_to 'Triple Canopy', 'http://canopycanopycanopy.com/', :target => :_blank
+                / %li= link_to 'Supermarket Art Fair', 'http://supermarketartfair.com', :target => :_blank
+                / %li= link_to 'Version', 'http://version.com', :target => :_blank
+              %li= link_to 'Contact', '/contact'
     :javascript
       $(document).ready(function() {
         #{yield :jquery}
